# Aletheia_sc2

./: .gitignore  README.md  pyproject.toml
configs/: run.yaml
sc2bot/: env_sc2.py
sc2bot/agent/: scripted_zerg.py
sc2bot/bots/: zerg_bot.py
sc2bot/macros/: __init__.py  exec_utils.py  zerg_basic.py
sc2bot/runners/: run_env.py  run_poc.py
sc2bot/telemetry/: logging_setup.py  overlay.py  schemas.py
sc2bot/utils/: paths.py  seeds.py
scripts/: start_stream.sh
